# football-match-parser

./: Cargo.toml  Readme.md  matches.txt
src/: .gitignore  grammar.pest  lib.rs  main.rs
tests/: test_date_and_time.rs  test_match_lines.rs  test_score_or_mark.rs  test_stadium_name.rs  test_status.rs  test_teams.rs
