[package]
name = "football_match_parser"
description = "Simple parser for reading football match lines(date, time, teams, score, stadium, and status) and converting them into structured data."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
